erDiagram
    USERS ||--o{ CERTIFICATES : "has many"
    CERTIFICATES ||--|| PRIVATE_KEYS : "has one"
    CERTIFICATES ||--o| REVOKED_CERTIFICATES : "may have one"

    USERS {
        UUID id PK
        VARCHAR(255) username UK
        VARCHAR(255) password_hash
        ENUM role
        TIMESTAMPTZ created_at
        TIMESTAMPTZ last_login_at
    }

    CERTIFICATES {
        UUID id PK
        UUID user_id FK
        VARCHAR(255) serial_number UK
        TEXT dn
        INTEGER validity_period_days
        ENUM status
        TIMESTAMPTZ expiration_date
        TIMESTAMPTZ created_at
        INTEGER renewed_count
        TIMESTAMPTZ renewal_date
    }

    PRIVATE_KEYS {
        UUID id PK
        UUID certificate_id FK "UK"
        BYTEA encrypted_key
        BYTEA salt
    }

    REVOKED_CERTIFICATES {
        UUID id PK
        UUID certificate_id FK "UK"
        TIMESTAMPTZ revocation_date
        VARCHAR(255) reason
    }